<resources>
    <string name="app_name">해비터</string>
    <string name="title">해비터</string>
    <string name="register_nick_name">닉네임을 입력해주세요.</string>
    <string name="register_explain">해당 닉네임으로 가입 후 자동 로그인 됩니다.</string>
    <string name="register_with_analysis">분석하고 시작</string>
    <string name="register_without_analysis">분석 없이 시작</string>
    <string name="how_to_use">사용 방법</string>
    <string name="register_title">회원가입</string>
    <string name="clock">오늘</string>
    <string name="calendar">달력</string>
    <string name="setting">설정</string>
    <string name="setting_with">설정</string>
    <string name="calendar_with">오늘의 명언</string>
    <string name="change_nickname">닉네임 변경하기</string>
    <string name="enter_change_nickname">닉네임을 입력해주세요.</string>
    <string name="confirm_change_nickname">변경완료</string>
    <string name="frequent_question">자주 묻는 질문</string>
    <string name="delete_all">데이터 모두 삭제</string>
    <string name="add_habit_dialog_title">습관 더하기</string>
    <string name="add_habit_dialog_et_hint">이곳에 적어주세요</string>
    <string name="confirm">확인</string>
    <string name="cancel">취소</string>
    <string name="delete_habit_dialog_title">습관 빼기</string>
    <string name="delete_habit_dialog_contents">삭제 하고 싶은 습관을 \n손가락으로 길게 눌러주세요.</string>
    <string name="addnewalarm">새 알람 추가</string>
    <string name="finger_one_detail_string">사람마다 담배를 끊는 방식과 폭식을 억누르는 방법이 모두 다르답니다. 게다가 한 사람에게 존재하는 습관들은 서로 다른 열망으로 부터 비롯되곤 한답니다. 이런 이유들로, 개선하고 싶은 습관에 단 하나의 처방만 내리는 것은 무의미 합니다. \n아래 버튼을 누르면 7일 동안 당신의 습관을 진단하고 구체적으로 전술을 낼 수 있습니다. \n습관 분석하기, 시작 하시겠어요?</string>
    <string name="finger_one_btn_string">습관 분석 하러 가기</string>
    <string name="finger_two_detail_string">모든 것은 나를 아는 것부터 시작한다 라는 말이 있습니다. 타고난 우리의 성향은 세상에 대한 우리의 관점을 결정하며 습관에도 막대한 영향을 미친답니다. \n이 검사로는 4가지 유형이 나옵니다. 준수형/의문형/강제형/저항형이 해당됩니다.\n자신의 성향을 분석하고 그에 맞는 계획을 세우세요!</string>
    <string name="finger_two_btn_string">내 성향 분석 하러 가기</string>
    <string name="analysis_habit_1">반복하는 행동이 무엇인가요?</string>
    <string name="analysis_habit_1_hint">ex: 편의점 가기, 담배 피기, 폭식 하기, 과자 사먹기</string>
    <string name="analysis_habit_2">보상 7가지를 입력해 주세요</string>
    <string name="analysis_habit_2_1">예를 들어 반복하는 행동이 편의점에 가는 것이라면, 보상 예시로는 공원 산책가기/차 한잔 마시기/유튜브 들어가기/친구한테 전화하기 등이 있을 수 있습니다.</string>
    <string name="analysis_habit_2_1_hint">보상행동 1</string>
    <string name="analysis_habit_2_2_hint">보상행동 2</string>
    <string name="analysis_habit_2_3_hint">보상행동 3</string>
    <string name="analysis_habit_2_4_hint">보상행동 4</string>
    <string name="analysis_habit_2_5_hint">보상행동 5</string>
    <string name="analysis_habit_2_6_hint">보상행동 6</string>
    <string name="analysis_habit_2_7_hint">보상행동 7</string>
    <string name="analysis_habit_3">7일동안 이것을 꼭 기억해주세요!</string>
    <string name="analysis_habit_3_1">"7일동안 당신은 해비터 앱과 함께 \n습관을 진단하게 됩니다.\n\n반복하는 행동은 자신도 모르는 열망으로 부터 기인하고, 보상은 열망을 채워주는 구조를 이루고 있습니다. \n\n7일동안 해비터 앱과 함께 자신을 관찰하는 연구박사라고 생각해보세요! \n당신은 확실히 달라질 겁니다! "</string>
    <string name="analysis_char_Q1">규칙을 어기는 사람(\"휴대전화 사용 금지\" 라는 표지판을 보고도 통화하는 사람) 과 함께 있으면 그 사람이 문제를 일으키거나 타인에게 피해를 주지 않아도 마음이 불편하다</string>
    <string name="yes">맞아</string>
    <string name="no">아냐</string>
    <string name="analysis_char_Q2">임의의 날짜라도 내가 정한 마감일을 지킨다.</string>
    <string name="analysis_char_Q3">신년 계획을 대체로 잘 지킨다 (오직 \'신년\' 계획에 대한 질문)</string>
    <string name="analysis_char_Q4">타인과 한 약속처럼 나 자신과 약속한 것도 잘 지킨다</string>
    <string name="analysis_char_Q5">엄격하게 규칙을 지키는 나를 보고 짜증을 내는 사람들이 있다. 융퉁성이 없다는 말도 들어봤다.</string>
    <string name="analysis_char_Q6">삶에 변화를 주고 싶으면 곧바로 행동으로 옮긴다. 하지만 내게 아무 의미도 없는 1월 1일 같은 날짜에 맞춰 신년 계획을 세우지는 않는다.</string>
    <string name="analysis_char_Q7">"이유를 충분히 따져보고 결정을 내린다. 확실한 근거와 정보를 요구하다가 사람들에게 불평을 듣는다. "</string>
    <string name="analysis_char_Q8">이유가 뚜렷하지 않은 부탁을 받으면 신경질이 난다.</string>
    <string name="analysis_char_Q9">전문가의 의견도 좋지만, 내 행동은 직접 결정한다. 구체적인 지시(운동 계획표 등)를 받아도 스스로 판단하고 수정한다.</string>
    <string name="analysis_char_Q10">"새로운 습관이 목표에 부합하면 큰 어려움 없이 받아들이지만 목표에 어긋나는 습관에는 관심도 주지 않는다. "</string>
    <string name="analysis_char_Q11">"성격의 4유형론에 기반을 두고  제작된 이 설문이 과연 타당한지 의심이 든다. "</string>
    <string name="analysis_char_Q12">보고서를 수정해달라거나, 내 차로 카풀을 하자거나, 코앞의 회의에서 발표를 해달라며 부탁을 하는 사람이 많다. 일이 산더미처럼 쌓여도 부탁을 받으면 수락하는 성격임을 알기 때문이다.</string>
    <string name="analysis_char_Q13">신년 계획을 지킨 적이 없어서 이제는 세우지도 않는다.</string>
    <string name="analysis_char_Q14">내 의지로 하지 못하는 일(피아노 연습, 편식 줄이기, 담배끊기 등)도 남에게 좋은 롤모델이 되기 위해서라면 마다하지 않는다.</string>
    <string name="analysis_char_Q15">없는 시간을 쪼개 남의 급한 일을 해주느라 내 일을 할 시간이 없어서 답답하다.</string>
    <string name="analysis_char_Q16">좋은 습관도 몇가지 있지만, 아무리 애써도 들이지 못하는 습관이 더 많다.</string>
    <string name="analysis_char_Q17">신년 계획을 세우거나 습관을 들이려는 시도조차 하지 않는다. 그런 구속은 사양한다.</string>
    <string name="analysis_char_Q18">내가 하고 싶은 일을 한다. 남의 기대에 따르지 않고 내가 원하는 대로 행동한다.</string>
    <string name="analysis_char_Q19">부탁이나 지시를 받으면 거절하고 싶다.</string>
    <string name="analysis_char_Q20">부탁을 거절해서 다른 사람의 기분을 상하게 할 때도 있다.</string>
    <string name="analysis_char_Q21">어려운 일도 스스로 선택하고 내 방식대로 할 수 있으면 즐겁게 해낸다.</string>
    <string name="analysis_char_Q22">목공 수업처럼 재미있는 일도 남이 하라고 하면 반발심이 생긴다. 주위 사람들의 기대를 받으면 재미가 반감된다.</string>
    <string name="submit">제출하기</string>
    <string name="go_to_daily">매일 기록 하러 가기</string>
    <string name="joonsoo_title">당신은 \n\n준수형 인간!</string>
    <string name="euimoon_title">당신은 \n\n의문형 인간!</string>
    <string name="gangjae_title">당신은 \n\n강제형 인간!</string>
    <string name="jeohang_title">당신은 \n\n저항형 인간!</string>
    <string name="gangjae_detail1">강제형 인간은 외적 기대는 쉽게 받아들이지만, 내적 기대는 충족시키기 어려워하는 티입입니다.</string>
    <string name="joonsoo_detail1">"준수형 인간은 외적 기대와 내적 기대를 모두 쉽게 받아들이는 타입입니다. "</string>
    <string name="euimoon_detail1">"의문형 인간은 모든 기대(외적/내적)에 의문을 제기한 후, 옳다고 생각하는 기대만 충족하는 타입입니다. "</string>
    <string name="jeohang_detail1">저항형 인간은 외적 기대와 내적 기대를 가리지 않고 모든 기대에 저항하는 타입입니다.</string>
    <string name="joonsoo_detail2">아침에 일어나면 오늘 일정은 어떻고 무슨 일을 해야하는지 생각하지 않나요?\n준수형은 다른 유형에 비해 자기 자신을 믿고, 도움을 받지 않는 편으로 자기 주도적이라고 볼 수 있습니다.\n때론 예술이나 도덕에서도 규칙 이상의 것을 찾으려고 하고, 여행 중 식중독이 걸려도 다음 날 일정을 꾸역꾸역 가곤 합니다.\n다른 사람의 기대에 부응해야 한다는 의무감 때문에 자기 보호 본능이 강하고, 기대가 명확치 않거나 규칙이 분병치 않은 상황을 못견딥니다. \n이러한 준수형은 상대적으로 습관을 들이기 쉽답니다.\n아래 습관 분석하기 버튼을 눌러 7일동안 고치고 싶은 습관을 바로잡아보아요!</string>
    <string name="euimoon_detail2">"오늘 할 일은 무엇이고 왜 해야하지 라는 생각으로 하루를 시작하지 않나요?\n스스로 최선이라고 믿는 행동을 하는 의문형은 자신이 타당하다고 판단하는 기대만을 충족하는 유형입니다. 이런 의문형을 움직이는 힘은 이성,논리,타당성이라고 할 수 있습니다.\n의문형은 의문을 제기하고 판단하는 과정을 통해 모든 기대를 내적 기대로 바꿉니다. 또한 행동하기 위해서는 확실한 근거가 있어야 하기 때문에 쉽게 결정을 내리지 못하기도 하죠.\n아래 습관 분석하기 버튼을 누르고 저희와 7일동안 습관을 분석해보는 건 어떠신가요? 의문형인 당신! 분명히 납득할만한 결과를 얻을 것입니다. "</string>
    <string name="gangjae_detail2">오늘 반드시 해야 할 일이 뭐더라? 하면서 아침을 맞지 않으시나요?\n강제형 유형의 사람들은 마감 기한 같은 외적 기대를 잘 지킨답니다. 다른 사람 기대를 져 버린다는 것에 두려움을 느끼곤 하기 때문이죠. 이런 이유로 자기 의지대로 행동하는 것에 서툰 편입니다.\n강제형은 보통 다른 사람과의 약속에는 책임감을 느끼지만 스스로 적어놓은 계획을 보면 그런 느낌을 전혀 받지 못하곤합니다. 강제형에게는 자기 희생 습성이 있다고 볼 수 있는데요, 이 능력은 자신을 위해 하지 못하는 일도 다른 사람을 위해 거뜬이 해내기도 한답니다.\n4가지 유형 중 습관을 들이기 가장 어려운 강제형에게 핵심은 외적 책임 만들기입니다!</string>
    <string name="jeohang_detail2">아침에 일어나서 오늘 하고 싶은 일이 뭘까 생각하지 않으시나요?\n주어진 업무보다는 자신이 완성하고 싶은 일을 하고, 자신만의 방식으로 자신만의 목표를 추구하는 저항형 유형은 반드시 해야할일까지 거부하며 목표를 달성하곤 합니다.\n독불장군인 저항형은 사실 습관을 거부하는 유형입니다. 하지만 저항형인 당신! 흡연이나, 폭식 등 멈추고 싶은 습관이 있으신가요? 7일동안 저희와 함께 습관을 분석하고 만들어 나가 보는 건 어떤가요?</string>
    <string name="seven_days_Q_where">1. 신호를 느낀 장소가 어디인가요?</string>
    <string name="seven_days_Q_where_hint">ex: 집, 직장, 학교, 카페, 분식점 앞, 지하철 등</string>
    <string name="seven_days_Q_when">2. 신호를 느낀 시간은 어떻게 되나요?</string>
    <string name="seven_days_Q_when_hint">시간 입력</string>
    <string name="seven_days_Q_emo">3. 신호를 느꼈을 때의 감정 상태를 선택해 주세요!</string>
    <string name="seven_days_Q_others">4. 신호를 느꼈을 때 주변에 다른 사람이 있었나요? 혼자였나요?</string>
    <string name="alone">혼자</string>
    <string name="not_alone">다른 사람 있었음</string>
    <string name="seven_days_Q_other_act">5. 신호가 오기 직전의 행동은 무엇인가요?</string>
    <string name="seven_days_Q_other_act_hint">ex: 식사 마침, 친구와 전화, 자고 일어남, 등</string>
    <string name="analysis_start">7일 분석 시작</string>
    <string name="you_are_on_analysis">당신은 분석 중! 입니다.\n\n반복 행동의 신호가 오셨나요?\n\n아래의 버튼을 누르고 습관 기록을 합시다!</string>
    <string name="go_to_seven_days">반복 행동 신호 기록하기</string>
</resources>
