<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/round_background"
    android:layout_gravity="right"
    android:layout_width="250dp"
    android:layout_height="180dp">

    <TextView
        android:id="@+id/add_habit_dialog_tv_title"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/round_background"
        android:backgroundTint="@color/colorPrimaryDark"
        android:drawableTint="@color/colorDarkGray"
        android:drawableLeft="@drawable/ic_brush"
        android:paddingLeft="20dp"
        android:drawablePadding="-25dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:text="@string/add_habit_dialog_title"
        android:textColor="@color/colorDarkGray"
        android:textSize="16sp"
        android:fontFamily="@font/a_lignt_font"
        android:gravity="center"/>

    <EditText
        android:id="@+id/add_habit_dialog_et_user_input"
        app:layout_constraintTop_toBottomOf="@id/add_habit_dialog_tv_title"
        android:layout_marginTop="25dp"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/dark_green_edittext"
        android:hint="@string/add_habit_dialog_et_hint"
        android:textColor="@color/colorDarkGray"
        android:textSize="14sp"
        android:textColorHint="@color/colorMiddleGray"
        android:fontFamily="@font/a_lignt_font"
        android:gravity="center"/>

    <TextView
        android:id="@+id/add_habit_dialog_tv_confirm"
        app:layout_constraintTop_toBottomOf="@id/add_habit_dialog_et_user_input"
        android:layout_marginTop="25dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        android:layout_marginLeft="60dp"
        android:textColor="@color/colorPrimaryDark"/>

    <TextView
        android:id="@+id/add_habit_dialog_tv_cancel"
        app:layout_constraintTop_toBottomOf="@id/add_habit_dialog_et_user_input"
        android:layout_marginTop="25dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="60dp"
        android:text="@string/cancel"
        android:textColor="@color/colorPrimaryDark"/>

</androidx.constraintlayout.widget.ConstraintLayout>