<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorWhite"
    android:layout_height="match_parent"
    tools:context=".Register.RegisterActivity">

    <TextView
        android:id="@+id/register_tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_title"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/colorDarkGray"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/a_lignt_font"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="25dp"/>

    <ScrollView
        app:layout_constraintTop_toBottomOf="@id/register_tv_title"
        app:layout_constraintBottom_toTopOf="@id/register_iv_bottom_flower"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/register_et_nick_name"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:focusable="true"
                android:layout_marginRight="20dp"
                android:textColorHint="@color/colorDarkGray"
                android:textColor="@color/colorDarkGray"
                android:hint="@string/register_nick_name"
                android:fontFamily="@font/a_lignt_font"/>

            <TextView
                android:id="@+id/register_tv_explain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_explain"
                android:textSize="14sp"
                android:textColor="@color/colorDarkGray"
                android:fontFamily="@font/a_lignt_font"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                app:layout_constraintTop_toBottomOf="@id/register_et_nick_name"
                app:layout_constraintLeft_toLeftOf="@id/register_et_nick_name"/>

            <Button
                android:id="@+id/register_tv_btn_start_with_analysis"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/register_with_analysis"
                android:background="@drawable/round_background"
                android:backgroundTint="@color/colorDarkGray"
                android:fontFamily="@font/a_lignt_font"
                android:gravity="center"
                android:textSize="26sp"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"
                android:layout_marginBottom="45dp"
                app:layout_constraintTop_toBottomOf="@id/register_tv_explain"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="60dp"/>

            <Button
                android:id="@+id/register_tv_btn_start_without_analysis"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/register_without_analysis"
                android:background="@drawable/round_background"
                android:backgroundTint="@color/colorPrimaryDark"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:fontFamily="@font/a_lignt_font"
                android:gravity="center"
                android:textSize="26sp"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/register_tv_btn_start_with_analysis"
                android:layout_marginTop="45dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />


            <Button
                android:id="@+id/register_tv_btn_how_to_use"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/how_to_use"
                android:background="@drawable/round_background"
                android:backgroundTint="@color/colorMiddleGray"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:fontFamily="@font/a_lignt_font"
                android:gravity="center"
                android:textSize="26sp"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"
                android:layout_marginTop="45dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/register_tv_btn_start_without_analysis"/>


            <View
                android:layout_width="match_parent"
                android:layout_height="100dp"
                app:layout_constraintTop_toBottomOf="@id/register_tv_btn_how_to_use"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>




    <ImageView
        android:id="@+id/register_iv_bottom_flower"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:scaleType="fitXY"
        android:src="@drawable/bottomdeco"/>
</androidx.constraintlayout.widget.ConstraintLayout>