<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorWhite"
    android:layout_height="match_parent"
    tools:context=".Analysis_habit_Result.Analysis_habit_result_Activity">

    <ImageView
        android:id="@+id/analysis_result_btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="20dp"
        app:srcCompat="@drawable/ic_arrow_back"
        android:layout_marginLeft="20dp" />

    <ScrollView
        app:layout_constraintTop_toBottomOf="@id/analysis_result_btn_back"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/analysis_result_iv_finger_one"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/img_finger_one"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="150dp"
                android:layout_marginLeft="20dp"/>

            <TextView
                android:id="@+id/analysis_result_tv_detail_finger_one"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/a_lignt_font"
                android:text="@string/you_are_on_analysis"
                android:textColor="@color/colorDarkGray"
                android:textSize="18sp"
                android:gravity="center_vertical"
                app:layout_constraintTop_toTopOf="@id/analysis_result_iv_finger_one"
                app:layout_constraintBottom_toBottomOf="@id/analysis_result_iv_finger_one"
                android:layout_marginRight="20dp"
                app:layout_goneMarginLeft="10dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toRightOf="@id/analysis_result_iv_finger_one"
                android:layout_marginLeft="10dp"/>

            <Button
                android:id="@+id/analysis_result_btn_finger_one"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                app:layout_constraintTop_toBottomOf="@id/analysis_result_tv_detail_finger_one"
                android:layout_marginTop="60dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:fontFamily="@font/a_lignt_font"
                android:textSize="20sp"
                android:textColor="@color/colorBlack"
                android:text="@string/go_to_seven_days"
                android:background="@drawable/round_background"
                android:backgroundTint="@color/colorMiddleGray"/>

            <Button
                android:id="@+id/analysis_result_btn_go_to_today"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                app:layout_constraintTop_toBottomOf="@id/analysis_result_btn_finger_one"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:fontFamily="@font/a_lignt_font"
                android:textSize="20sp"
                android:textColor="@color/colorWhite"
                android:text="@string/go_to_daily"
                android:background="@drawable/round_background"
                android:backgroundTint="@color/colorDarkGray"/>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>